--- a/public/doc/css/main.css
+++ b/public/doc/css/main.css
@@ -1145,10 +1145,10 @@ pre code {
     max-width: 91.6666666667%;
   }
   .col-md-12 {
-    -webkit-box-flex: 0;
+    /* -webkit-box-flex: 0;
         -ms-flex: 0 0 100%;
             flex: 0 0 100%;
-    max-width: 100%;
+    max-width: 100%; */
   }
   .order-md-first {
     -webkit-box-ordinal-group: 0;
@@ -1292,10 +1292,10 @@ pre code {
     max-width: 16.6666666667%;
   }
   .col-lg-3 {
-    -webkit-box-flex: 0;
+    /* -webkit-box-flex: 0;
         -ms-flex: 0 0 25%;
-            flex: 0 0 25%;
-    max-width: 25%;
+            flex: 0 0 25%; */
+    max-width: 30%;
   }
   .col-lg-4 {
     -webkit-box-flex: 0;
@@ -1310,10 +1310,10 @@ pre code {
     max-width: 41.6666666667%;
   }
   .col-lg-6 {
-    -webkit-box-flex: 0;
+    /* -webkit-box-flex: 0;
         -ms-flex: 0 0 50%;
             flex: 0 0 50%;
-    max-width: 50%;
+    max-width: 50%; */
   }
   .col-lg-7 {
     -webkit-box-flex: 0;
