--- a/public/afterlogin/css/main.css
+++ b/public/afterlogin/css/main.css
@@ -16613,7 +16613,11 @@ td,
 th {
   border: 1px solid #dddddd;
   text-align: left;
+
   padding: 8px;
+}
+tr td:last-child{
+  text-align: center;
 }
 
 .du--lieu-san-pham {
